# causadb-examples

./: .gitignore  README.md
.streamlit/: config.toml
node/: README.md
python/: .env.example  README.md  pyproject.toml
python/production_line/: README.md  data.ipynb  edges.json  main.ipynb  nodes.json  production_data.csv  pyproject.toml
python/smart_building/: README.md  app.py  data.csv  example_heating_data.csv  notebook.ipynb  pyproject.toml  simulate.py  train.py
python/smart_building/.ipynb_checkpoints/: notebook-checkpoint.ipynb
rest/: README.md
