[tool.poetry]
name = "causadb-examples"
version = "0.1.0"
description = ""
authors = ["JHart96 <jordan@causa.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
plotly = "^5.18.0"
jupyter = "^1.0.0"
kaleido = "0.2.1"
streamlit = "^1.31.1"
causadb = "^1.0.7"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
