[tool.poetry]
name = "causadb-examples-smart-building"
version = "0.1.0"
description = ""
authors = ["JHart96 <jordan@causa.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.26.3"
plotly = "^5.18.0"
jupyter = "^1.0.0"
kaleido = "0.2.1"
streamlit = "^1.31.1"
matplotlib = "^3.8.2"
causadb = "^1.8.4"
streamlit-extras = "^0.4.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
statsmodels = "^0.14.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
